style: temp fix: hover contrast nav items

--- a/packages/storybook/src/templates/shared/header.css
+++ b/packages/storybook/src/templates/shared/header.css
@@ -2,3 +2,8 @@
   color: inherit;
   display: flex;
 }
+
+/* TODO temp solution - later fix in design tokens? */
+:root body {
+  --rhc-nav-bar-link-hover-background-color: #dce3ea;
+}
